[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danyal9999", email = "Danyalkanzanahmad789@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hello-world = "hello_world:main"
first_uv = "hello_world.first_uv_Project:hello_world"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
